# stream

./: .gitignore  404.html  README.md  index.html  justfile  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
guide/install/: index.html
guide/overview/: index.html
guide/usage/: index.html
reference/cli/: index.html
reference/config/: index.html
search/: search_index.json
src/sti/: __main__.py
src/sti/imports/: resolve.py
src/sti/meta/: program.py
src/sti/parse/: program.py
src/stream/builtins/functions/: __init__.py  seasons.py
src/stream/builtins/keywords/: comment.py
src/stream/builtins/operators/: __init__.py
src/stream/modules/: __init__.py
src/stream/modules/os/: __init__.py  fd.py
src/stream/modules/self/: __init__.py
src/stream/program/: poc.py
