[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "stream"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "rich>=14.2.0",
    "typer>=0.21.0",
]

[project.scripts]
stream = "stream.__main__:main"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"
raw-options = { version_scheme = "no-guess-dev", local_scheme = "no-local-version" }

[tool.hatch.build.hooks.vcs]
version-file = "src/stream/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/stream"]
