[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "stream"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "rich>=14.2.0",
    "typer>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.8.0",
]

[project.scripts]
stream = "stream.__main__:main"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"
raw-options = { version_scheme = "no-guess-dev", local_scheme = "no-local-version" }

[tool.hatch.build.hooks.vcs]
version-file = "src/stream/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/stream"]

# Ruff
[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
fixable = ["ALL"]

# mypy
[tool.mypy]
mypy_path = "src"
packages = ["stream"]
namespace_packages = true

warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true

disallow_untyped_defs = true
check_untyped_defs = true

pretty = true
show_error_codes = true
